in this version I fixed styles to display .cropper-container properly

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -28,7 +28,6 @@ section {
 	margin-top: 50px;
   padding: 60px;
   height: 100%;
-  min-height: auto;
 }
 
 /* Header and text styles */
@@ -42,6 +41,14 @@ section {
 }
 
 /*Form styles*/
+#postForm .col-md-12 {
+  max-height: 500px;
+  height: auto;
+}
+#imgPreviewContainer,
+#imgPreviewContainer .cropper-container {
+  max-height: 500px !important;
+}
 .custom-file-upload {
     border: 1px ridge #3498db;
     border-radius: 5px;
